# somReport

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  project_review.md
.agents/: AGENTS.md
.github/workflows/: release.yml
docs/compose/plans/: 2026-06-23-daytrace-mvp.md
docs/design/: DESIGN.md  design-contract.md  implementation-handoff.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/capture/: fake.rs  mod.rs  x11.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: activity.rs  capture.rs  job.rs  mod.rs  provider.rs  report.rs  settings.rs
src-tauri/src/migrations/: 001_initial.sql  002_fix_usage_cost_type.sql  003_convert_usage_cost_to_yuan.sql
src-tauri/src/pipeline/: dedup.rs  mod.rs  queue.rs  retry.rs  scheduler.rs
src-tauri/src/platform/: idle.rs  mod.rs  notifications.rs  paths.rs  tray.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai.rs  prompts.rs  validation.rs
src-tauri/src/reporting/: aggregation.rs  export.rs  mod.rs  templates.rs
src-tauri/src/storage/: activity_repo.rs  job_repo.rs  migrations.rs  mod.rs  report_repo.rs  settings_repo.rs  usage_repo.rs
src/api/: tauri.ts
src/components/: ActivityCard.tsx  ActivityHeatmap.tsx  BudgetIndicator.tsx  Button.tsx  CaptureToggle.tsx  FloatingWidget.tsx  StateViews.tsx  StatusBadge.tsx  Timeline.tsx
src/hooks/: useRecording.ts  useSettings.ts
src/lib/: constants.ts  datetime.ts  tauri.ts  types.ts
src/pages/: ModelConfig.tsx  Reports.tsx  Settings.tsx  Today.tsx
src/stores/: recording.ts  settings.ts
