[package]
name = "daytrace"
version = "0.1.0"
description = "A desktop app for tracking work through screenshots and AI analysis"
authors = ["you"]
edition = "2021"

[lib]
name = "daytrace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
