[package]
name = "som-report"
version = "0.1.0"
description = "A desktop app for tracking work through screenshots and AI analysis"
authors = ["you"]
edition = "2021"

[lib]
name = "som_report_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
image = "0.25"
image_hasher = "3"
notify-rust = "4"
zbus = "5"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
base64 = "0.22"
dirs = "6"
futures-util = "0.3"
xcap = "0.9"
md-5 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
